# WebScrapper

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
migrations/changelog/: master.xml
migrations/changelog/versions/: 00-initial-schema.sql
src/: dependencies.py  http_constants.py  main.py  server.py  session_manager.py
src/api/: __init__.py
src/api/endpoints/: __init__.py
src/api/endpoints/bot_api/: bot_updates.py
src/api/endpoints/scrapper_api/: chat.py  link.py  tag.py
src/api/ping/: __init__.py  handlers.py
src/api/utils/: link_conversion.py
src/bot/: bot_service.py  command_context.py  commands.py  handlers_registry.py  scheduler.py  settings.py
src/bot/notification_sender/: base.py  http_sender.py
src/db/: models.py  settings.py
src/db/repositories/: base.py  types.py
src/db/repositories/orm_repository/: chat_repository.py  link_repository.py  tag_repository.py
src/db/repositories/sql_repository/: chat_repository.py  link_repository.py  sql_pool_manager.py  tag_repository.py
src/handlers/: __init__.py  chat_id.py  handler_utils.py  help.py  list_links.py  start.py  tag_handlers.py  track.py  untrack.py
src/scrapper/: client.py  models_dto.py  schemas.py  scrapper_exceptions.py  settings.py
src/scrapper/clients/: base_client.py  github_client.py  stackoverflow_client.py
src/scrapper/clients/clients_exceptions/: github_exceptions.py  stackoverflow_exceptions.py
tests/: conftest.py  fake_objects.py
tests/bot/: test_bot_service.py  test_handlers_registry.py
tests/db/repositories/orm_repository/: test_link_repository.py
tests/db/repositories/sql_repository/: test_link_repository.py
tests/handlers/: test_chat_id.py  test_help.py  test_list_links.py  test_start.py  test_tag_handlers.py  test_track.py  test_untrack.py
tests/scheduler/: test_scheduler.py  test_scheduler_error_handling.py  test_scheduler_notifications.py  test_scheduler_parsing.py  test_scheduler_updates.py
tests/scrapper/: test_client.py
